--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,24 @@ p
   font-size: 20px
 }
 
-.aboutus
+.aboutus, .pick
 {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+li
+{
+  font-family: 'Open Sans';
+  list-style-type: none
+}
+
+label
+{
+  font-family: 'Open Sans'
+}
+
+.required-message
+{
+  visibility: hidden;
 }
